Some improvements made

--- a/.env.testing
+++ b/.env.testing
@@ -23,9 +23,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=buzzvel  # Change to your test database name
+DB_DATABASE=buzzvel
 DB_USERNAME=buzzvel
-DB_PASSWORD=ABuzzvel$32
+DB_PASSWORD=buzzvel
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
